# meal-planner

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/api/: __init__.py  grocery_list.py  meal_plan.py  recipes.py
app/core/: database.py  dependencies.py
app/models/: __init__.py  base_model.py  grocery_list.py  grocery_list_item.py  ingredient.py  recipe.py  recipe_ingredient.py
app/repositories/: grocery_list.py  ingredients.py  recipes.py
app/schemas/: enums.py  grocery_list.py  ingredient.py  meal_plan.py  recipe.py  recipe_ingredient.py
app/seeds/: __init__.py  recipes.py
app/services/: grocery_list.py  llm.py  meal_plan.py  recipe.py
app/shared/: constants.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: Navigation.tsx  Pagination.tsx  RecipeCard.tsx
frontend/src/constants/: units.ts
frontend/src/pages/: CreateRecipePage.tsx  GroceryListPage.tsx  HomePage.tsx  MealPlanPage.tsx  RecipeViewPage.tsx
frontend/src/services/: api.ts
migrations/: env.py
migrations/versions/: 2025_04_09_1446-3eb105df866c_initial_migration.py  2025_04_09_1636-302b468ecccb_add_ingredient_and_recipe_ingredient_.py  2025_04_10_1436-166a58add2b1_add_timestamps_to_basemodel.py  2025_05_01_1423-378c2d5f4d1c_migrate_grocery_lists_and_grocery_list_.py
scripts/: __init__.py  create_recipe_embeddings.py  seed_db.py  start.sh  utils.py
tests/repositories/: test_recipes.py
